--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,10 @@
+composer.json export-ignore
+composer.lock export-ignore
+bin/ export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
+.github export-ignore
+.phpcs.xml export-ignore
+package*json export-ignore
+.changelog/ export-ignore
