--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 composer.json export-ignore
 composer.lock export-ignore
 bin/ export-ignore
+tests/ export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
