--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@ tests/ export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
-.github export-ignore
 .phpcs.xml export-ignore
 package*json export-ignore
 .changelog/ export-ignore
+build-image-source-control.php export-ignore
