Adjusted autoload for PSR-4 compatibility
This is a maintenance adjustment not needed for production. When telling PHPStorm to use a composer.json file to map namespaces according to psr-4, one can only use one. But our project has two, one for the base code, one for premium features. So adding the namespace of pro to the base composer.json is a quick solution.

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Thomas Maier",
-            "email": "thomas.maier@webgilde.com"
+            "email": "thomas@imagesourcecontrol.com"
         }
     ],
     "minimum-stability": "stable",
@@ -25,7 +25,8 @@
     },
     "autoload": {
         "psr-4": {
-            "ISC\\": "includes/"
+            "ISC\\": "includes/",
+            "ISC\\Pro\\": "pro/includes/"
         },
         "classmap": [
             "admin/",
