--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,22 @@
     ],
     "minimum-stability": "stable",
     "require-dev": {
-        "lucatume/wp-browser": "^3.1",
         "codeception/module-asserts": "^1.0",
-        "codeception/module-phpbrowser": "^1.0",
-        "codeception/module-webdriver": "^1.0",
+        "codeception/module-cli": "^1.0",
         "codeception/module-db": "^1.0",
         "codeception/module-filesystem": "^1.0",
-        "codeception/module-cli": "^1.0",
-        "codeception/util-universalframework": "^1.0"
+        "codeception/module-phpbrowser": "^1.0",
+        "codeception/module-webdriver": "^1.0",
+        "codeception/util-universalframework": "^1.0",
+        "lucatume/wp-browser": "^3.1",
+        "wp-coding-standards/wpcs": "^3.0"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -33,5 +38,8 @@
             "includes",
             "public/"
         ]
+    },
+    "scripts": {
+        "cs": "vendor/bin/phpcs --standard=.phpcs.xml"
     }
 }
