Shorthands for tests
Added shorthands to the `composer.json` to call tests quicker. E.g., instead of `vendor/bin/codecept run wpunit` I just call `composer wpunit`.

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,8 @@
         ]
     },
     "scripts": {
-        "cs": "vendor/bin/phpcs --standard=.phpcs.xml"
+        "cs": "vendor/bin/phpcs --standard=.phpcs.xml",
+        "wpunit": "vendor/bin/codecept run wpunit",
+        "functional": "vendor/bin/codecept run functional"
     }
 }
