set WP language for tests
Out of the blue, the tests I set up using source labels failed because my test environment used German. Setting the language option in the test settings fixed that.

--- a/tests/wpunit.suite.yml
+++ b/tests/wpunit.suite.yml
@@ -20,3 +20,4 @@ modules:
             title: "ISC"
             plugins: ['image-source-control/isc.php']
             activatePlugins: ['image-source-control/isc.php']
+            language: en_US
