Tests for Indexer class and Global List
- acceptance test for creating the Global List

- WPunit tests for the new `ISC\Indexer` class

- updated the test database to work with short permalinks

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "scripts": {
         "cs": "vendor/bin/phpcs --standard=.phpcs.xml",
         "wpunit": "vendor/bin/codecept run wpunit",
-        "functional": "vendor/bin/codecept run functional"
+        "functional": "vendor/bin/codecept run functional",
+        "acceptance": "vendor/bin/codecept run acceptance"
     }
 }
