Test PHP versions
- Moved additional helper scripts into the new `scripts` folder.

- Added `php-tests.sh` to run tests with multiple PHP versions in bulk

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ tests/ export-ignore
 package*json export-ignore
 .changelog/ export-ignore
 build-image-source-control.php export-ignore
+scripts/ export-ignore
