--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ package*json export-ignore
 .changelog/ export-ignore
 build-image-source-control.php export-ignore
 scripts/ export-ignore
+AGENTS.md export-ignore
