--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ tests/ export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .github export-ignore
+.gitmodules export-ignore
 .phpcs.xml export-ignore
 package*json export-ignore
 .changelog/ export-ignore
