Removed Pro mapping from basic composer autoloader
In https://github.com/image-source-control/image-source-control/commit/f51851ace5ef17bbbd5cf8a67c6e1be8c826ce5a, I added Pro autoloading to the composer autoload configuration to prevent my IDE from giving warnings about wrong paths. This added Pro-autoloading to the base plugin. While it doesn’t have practical consequences, it was confusing. It also caused change notices every time a Pro class was added or renamed.

I need to find a better solution for this. Unfortunately, PHPStorm only reads one composer per project.

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     },
     "autoload": {
         "psr-4": {
-            "ISC\\": "includes/",
-            "ISC\\Pro\\": "pro/includes/"
+            "ISC\\": "includes/"
+
         },
         "classmap": [
             "admin/",
